# words-segmentation

./: README.md  pyproject.toml
words_segmentation/: languages.py  thai.py
