[project]
name = "words-segmentation"
description = "Text segmentation into words for multiple languages."
version = "0.0.1"
authors = [
    { name = "Amit Moryossef", email = "amit@sign.mt" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "transformers[torch]",
    "utf8-tokenizer",
    "fugashi[unidic-lite]", # For Japanese word segmentation
    "jieba", # For Chinese word segmentation
    "signwriting", # For SignWriting segmentation
    "pythainlp", # For Thai word segmentation
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-xdist", # For parallel test execution
]


[tool.setuptools]
packages = [
    "words_segmentation",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint.per-file-ignores]
"examples/tokens_parity.py" = ["E501"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "C90", # mccabe complexity
    "I", # isort
    "N", # pep8-naming
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "PT", # flake8-pytest-style
    "W605", # invalid escape sequence
    "BLE", # flake8-blind-except
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["words_segmentation", "tests"]
